Starting to implement UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>WebCaaS</title>
+    <title>{{config.WEBSITE_TITLE}}</title>
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"/>
+    <link rel="stylesheet" type="text/css" href="/static/fonts.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/style.css"/>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="static/bundle.js"></script>
+    <div id="root"></div>
+    <script src="/static/bundle.js"></script>
   </body>
 </html>
