--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/static/bundle.js"></script>
+    <script src="/static/bundle.auto.js"></script>
   </body>
 </html>
